k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: spygram/backend:latest
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    matchLabels:
      app: backend
  ports:
    - protocol: TCP
      port: 3000
      # targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api.sujandongol.com.np 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: backend-service
            port:
              number: 3000
